<resources>
    <string name="app_name">Team #37</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_weather_map">Weather Map</string>
    <string name="logout">Log Out</string>
</resources>